; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_vita2d_gfx.c_vita_unload_texture.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_vita2d_gfx.c_vita_unload_texture.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vita2d_texture = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64)* @vita_unload_texture to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vita_unload_texture(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.vita2d_texture*, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = inttoptr i64 %6 to %struct.vita2d_texture*
  store %struct.vita2d_texture* %7, %struct.vita2d_texture** %5, align 8
  %8 = load %struct.vita2d_texture*, %struct.vita2d_texture** %5, align 8
  %9 = icmp ne %struct.vita2d_texture* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  br label %15

11:                                               ; preds = %2
  %12 = call i32 (...) @vita2d_wait_rendering_done()
  %13 = load %struct.vita2d_texture*, %struct.vita2d_texture** %5, align 8
  %14 = call i32 @vita2d_free_texture(%struct.vita2d_texture* %13)
  br label %15

15:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @vita2d_wait_rendering_done(...) #1

declare dso_local i32 @vita2d_free_texture(%struct.vita2d_texture*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
